--- a/Login/.settings/org.eclipse.core.resources.prefs
+++ b/Login/.settings/org.eclipse.core.resources.prefs
@@ -1,8 +1,9 @@
-#Tue May 05 14:39:08 CST 2015
+#Fri Aug 28 08:56:21 CST 2015
 eclipse.preferences.version=1
 encoding//WebRoot/500.html=UTF-8
 encoding//WebRoot/MyHtml.jsp=UTF-8
 encoding//WebRoot/Test1.jsp=UTF-8
+encoding//WebRoot/bootstrap.html=UTF-8
 encoding//WebRoot/bottom.html=UTF-8
 encoding//WebRoot/css/button_css.css=UTF-8
 encoding//WebRoot/css/div_round.css=UTF-8
