--- a/Login/WebRoot/WEB-INF/web.xml
+++ b/Login/WebRoot/WEB-INF/web.xml
@@ -25,7 +25,23 @@ version="2.5">
   <listener>
   <listener-class>util.SessionListener</listener-class>
   </listener> -->
-
+   <!-- 解决延迟加载的问题 -->
+  
+<!--  <filter>  
+        <filter-name>OpenSessionInViewFilter</filter-name>  
+        <filter-class>  
+                         org.springframework.orm.hibernate3.support.OpenSessionInViewFilter 
+                         
+        </filter-class>  
+                <init-param>                         
+                         <param-name>sessionFactoryBeanName</param-name>
+                         <param-value>sessionFactory</param-value> 
+                </init-param>                         
+</filter>  
+ <filter-mapping>  
+         <filter-name>OpenSessionInViewFilter</filter-name>  
+         <url-pattern>/*</url-pattern>  
+ </filter-mapping>   -->
 
 
       
@@ -39,28 +55,7 @@ version="2.5">
     <filter-name>struts2</filter-name>
     <url-pattern>/*</url-pattern>
   </filter-mapping>
-   <!-- 解决延迟加载的问题 -->
-  
- <filter>  
-        <filter-name>OpenSessionInViewFilter</filter-name>  
-        <filter-class>  
-                         org.springframework.orm.hibernate3.support.OpenSessionInViewFilter
-        </filter-class>  
-                <!-- singleSession默认为true,若设为false则等于没用OpenSessionInView  -->
-                <!-- <init-param>                         
-                         <param-name>sessionFactoryBean</param-name>
-                         <param-value>sessionFactory</param-value> 
-                </init-param>
-                <init-param>
-                         <param-name>singleSession</param-name>
-                         <param-value>true</param-value>
-                </init-param> -->
-                
-        </filter>  
-        <filter-mapping>  
-                <filter-name>OpenSessionInViewFilter</filter-name>  
-                <url-pattern>/*</url-pattern>  
-        </filter-mapping>   
+ 
 
 
   <filter>
