--- a/Login/.settings/com.genuitec.eclipse.core.prefs
+++ b/Login/.settings/com.genuitec.eclipse.core.prefs
@@ -1,4 +1,4 @@
-#Thu Jun 26 10:40:28 CST 2014
+#Mon Oct 19 13:58:10 CST 2015
 eclipse.preferences.version=1
-validator.Checked=
+validator.Checked=/
 validator.Unchecked=
