--- a/Login/WebRoot/WEB-INF/web.xml
+++ b/Login/WebRoot/WEB-INF/web.xml
@@ -116,5 +116,23 @@ version="2.5">
      <servlet-name>JasperReportImageServlet</servlet-name>
      <url-pattern>/image</url-pattern>
  </servlet-mapping>
-
+<!-- log4j配置 -->
+ <!-- 设置根目录 -->  
+    <context-param>    
+        <param-name>webAppRootKey</param-name>    
+        <param-value>Login.root</param-value>    
+    </context-param> 
+    <context-param>  
+        <param-name>log4jConfigLocation</param-name>  
+        <param-value>/WEB-INF/classes/log4j.properties</param-value>  
+    </context-param> 
+        <!-- 3000表示 开一条watchdog线程每60秒扫描一下配置文件的变化;这样便于日志存放位置的改变 -->  
+    <context-param>    
+         <param-name>log4jRefreshInterval</param-name>    
+         <param-value>3000</param-value>    
+    </context-param>   
+    <listener>  
+        <listener-class>org.springframework.web.util.Log4jConfigListener</listener-class>  
+    </listener>
+<!-- log4j配置 -->  
 </web-app>
