--- a/Login/WebRoot/WEB-INF/web.xml
+++ b/Login/WebRoot/WEB-INF/web.xml
@@ -17,7 +17,7 @@ version="2.5">
  
  <!-- session的有效期,單位:分 -->
  <session-config>
-    <session-timeout>2</session-timeout>
+    <session-timeout>30</session-timeout>
  </session-config>
   <listener>
     <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
@@ -48,7 +48,14 @@ version="2.5">
  </filter-mapping>   -->
 
 
-    
+ <filter>
+    <filter-name>sessionfilter</filter-name>
+    <filter-class>util.SessionTimeOutFilter</filter-class>
+</filter>
+<filter-mapping>
+    <filter-name>sessionfilter</filter-name>
+    <url-pattern>/*</url-pattern>
+</filter-mapping>    
 <filter> 
     <filter-name>struts2</filter-name>
     <filter-class>
@@ -59,14 +66,7 @@ version="2.5">
     <filter-name>struts2</filter-name>
     <url-pattern>/*</url-pattern>
 </filter-mapping>
-<filter>
-    <filter-name>sessionfilter</filter-name>
-    <filter-class>util.SessionTimeOutFilter</filter-class>
-</filter>
-<filter-mapping>
-    <filter-name>sessionfilter</filter-name>
-    <url-pattern>_*</url-pattern>
-</filter-mapping>   
+  
 <filter>
     <filter-name>NoCacheFilter</filter-name>
     <filter-class>util.NoCacheFilter</filter-class>
