--- a/Login/WebRoot/WEB-INF/web.xml
+++ b/Login/WebRoot/WEB-INF/web.xml
@@ -47,6 +47,14 @@ version="2.5">
          <url-pattern>/*</url-pattern>  
  </filter-mapping>   -->
 
+<!-- <filter>
+   <filter-name>session2</filter-name>
+   <filter-class>util.SessionTimeOutFilter2</filter-class>
+</filter>
+<filter-mapping>
+   <filter-name>session2</filter-name>
+   <url-pattern>/*</url-pattern>
+</filter-mapping> -->
 
 <filter>
     <filter-name>sessionfilter</filter-name>
@@ -77,27 +85,6 @@ version="2.5">
     <url-pattern>/*</url-pattern>
 </filter-mapping>
 
-
-  
-  
-<!-- <filter>
-                <filter-name>monitoring</filter-name>
-                <filter-class>net.bull.javamelody.MonitoringFilter</filter-class>
-        </filter>
-        <filter-mapping>
-                <filter-name>monitoring</filter-name>
-                <url-pattern>/*</url-pattern>
-        </filter-mapping>
-        <listener>
-                <listener-class>net.bull.javamelody.SessionListener</listener-class>
-        </listener> -->
-        
-<!--    <servlet>
-   <servlet-name>strutscontext</servlet-name>
-   <servlet-class>org.springframework.web.context.ContextLoaderServlet</servlet-class>
-   <load-on-startup>1</load-on-startup>
- </servlet>  -->
- 
 <servlet>  
     <servlet-name>dwr</servlet-name>  
     <servlet-class>org.directwebremoting.servlet.DwrServlet</servlet-class>  
