--- a/Login/WebRoot/WEB-INF/classes/.gitignore
+++ b/Login/WebRoot/WEB-INF/classes/.gitignore
@@ -3,8 +3,16 @@
 /email
 /entity
 /entity_temp
+/log4j.properties
 /mail
 /override
 /quartz
 /services
+/spring-action.xml
+/spring-dao.xml
+/spring-quartz.xml
+/spring-services.xml
+/spring.xml
+/struts.xml
+/uploadError.properties
 /util
