--- a/Login/WebRoot/WEB-INF/classes/.gitignore
+++ b/Login/WebRoot/WEB-INF/classes/.gitignore
@@ -1,11 +1,18 @@
-/.gitignore
+/entity
+/log4j.properties
+/spring-action.xml
+/spring-dao.xml
+/spring-quartz.xml
+/spring-services.xml
+/spring.xml
+/struts.xml
+/uploadError.properties
 /action
 /dao
-/entity
+/email
 /entity_temp
 /mail
 /override
 /quartz
 /services
 /util
-/email
