--- a/Login/WebRoot/WEB-INF/web.xml
+++ b/Login/WebRoot/WEB-INF/web.xml
@@ -44,7 +44,7 @@ version="2.5">
 
 <filter>
     <filter-name>sessionfilter</filter-name>
-    <filter-class>util.SessionTimeOutFilter_Login</filter-class>
+    <filter-class>util.SessionTimeOutFilter</filter-class>
     <init-param>
        <param-name>url_a</param-name>
        <param-value>/Login/,/Login_scm/,/</param-value>       
