--- a/Login/WebRoot/WEB-INF/web.xml
+++ b/Login/WebRoot/WEB-INF/web.xml
@@ -1,139 +1,103 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
-xmlns="http://java.sun.com/xml/ns/javaee" 
-xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" 
-xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" 
-version="2.5">
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
   <display-name></display-name>
-
-
   <welcome-file-list>
     <welcome-file>judge.jsp</welcome-file>
   </welcome-file-list>
-   <context-param>
+  <context-param>
     <param-name>contextConfigLocation</param-name>
     <param-value>classpath:spring.xml,classpath:spring-*.xml</param-value>
   </context-param>
   <distributable/>
- <!-- session的有效期,單位:分 -->
- <session-config>
+  <session-config>
     <session-timeout>30</session-timeout>
- </session-config>
+  </session-config>
   <listener>
     <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
-  </listener>  
- 
-   <!-- 解决延迟加载的问题 -->
-  
-<!--  <filter>  
-        <filter-name>OpenSessionInViewFilter</filter-name>  
-        <filter-class>  
-                         org.springframework.orm.hibernate3.support.OpenSessionInViewFilter 
-                         
-        </filter-class>  
-                <init-param>                         
-                         <param-name>sessionFactoryBeanName</param-name>
-                         <param-value>sessionFactory</param-value> 
-                </init-param>                         
-</filter>  
- <filter-mapping>  
-         <filter-name>OpenSessionInViewFilter</filter-name>  
-         <url-pattern>/*</url-pattern>  
- </filter-mapping>   -->
-
-
-<filter>
+  </listener>
+  <filter>
     <filter-name>sessionfilter</filter-name>
     <filter-class>util.SessionTimeOutFilter</filter-class>
     <init-param>
-       <param-name>url_a</param-name>
-       <param-value>/Login/,/Login_scm/,/</param-value>       
+      <param-name>url_a</param-name>
+      <param-value>/WebLogin/,/WebLogin_scm/,/</param-value>
     </init-param>
     <init-param>
-       <param-name>url_b</param-name>
-       <param-value>
+      <param-name>url_b</param-name>
+      <param-value>
           webfact_findAllWebfact,userlogin,loginpage,judge.jsp,vbm_findById_email,print2Ypoi_print2Y_hb,webfactOrder_print_email,login_guest.jsp,judge_guest.jsp,userlogout
        </param-value>
     </init-param>
     <init-param>
-       <param-name>url_c</param-name>
-       <param-value>webfact_findAllfact</param-value>
+      <param-name>url_c</param-name>
+      <param-value>webfact_findAllfact</param-value>
     </init-param>
-</filter>
-<filter-mapping>
+  </filter>
+  <filter-mapping>
     <filter-name>sessionfilter</filter-name>
     <url-pattern>/*</url-pattern>
-</filter-mapping>
-    
-<filter> 
+  </filter-mapping>
+  <filter>
     <filter-name>struts2</filter-name>
     <filter-class>
   		org.apache.struts2.dispatcher.ng.filter.StrutsPrepareAndExecuteFilter
-  		<!-- org.apache.struts2.dispatcher.FilterDispatcher-->
+  		
   	</filter-class>
-</filter>
-<filter-mapping>
+  </filter>
+  <filter-mapping>
     <filter-name>struts2</filter-name>
     <url-pattern>/*</url-pattern>
-</filter-mapping>
-  
-<filter>
+  </filter-mapping>
+  <filter>
     <filter-name>NoCacheFilter</filter-name>
     <filter-class>util.NoCacheFilter</filter-class>
-</filter>
-<filter-mapping>
+  </filter>
+  <filter-mapping>
     <filter-name>NoCacheFilter</filter-name>
     <url-pattern>/*</url-pattern>
-</filter-mapping>
-
-<servlet>  
-    <servlet-name>dwr</servlet-name>  
-    <servlet-class>org.directwebremoting.servlet.DwrServlet</servlet-class>  
-    <init-param>  
-        <param-name>debug</param-name>  
-        <param-value>true</param-value> 
-    </init-param> 
+  </filter-mapping>
+  <servlet>
+    <servlet-name>dwr</servlet-name>
+    <servlet-class>org.directwebremoting.servlet.DwrServlet</servlet-class>
     <init-param>
-        <param-name>crossDomainSessionSecurity</param-name>   
-     <param-value>false</param-value>   
-</init-param>
-<init-param>  
-            <param-name>allowScriptTagRemoting</param-name>  
-            <param-value>true</param-value>  
-        </init-param>  
-         <load-on-startup>1</load-on-startup>
-
-</servlet>  
-<servlet-mapping>  
-    <servlet-name>dwr</servlet-name>  
-    <url-pattern>/dwr/*</url-pattern>  
-</servlet-mapping>
-
- <servlet>
-     <servlet-name>JasperReportImageServlet</servlet-name>  
-       <servlet-class>net.sf.jasperreports.j2ee.servlets.ImageServlet</servlet-class>  
+      <param-name>debug</param-name>
+      <param-value>true</param-value>
+    </init-param>
+    <init-param>
+      <param-name>crossDomainSessionSecurity</param-name>
+      <param-value>false</param-value>
+    </init-param>
+    <init-param>
+      <param-name>allowScriptTagRemoting</param-name>
+      <param-value>true</param-value>
+    </init-param>
+    <load-on-startup>1</load-on-startup>
   </servlet>
-   <servlet-mapping>
-     <servlet-name>JasperReportImageServlet</servlet-name>
-     <url-pattern>/image</url-pattern>
- </servlet-mapping>
-<!-- log4j配置 -->
- <!-- 设置根目录 -->  
-    <context-param>    
-        <param-name>webAppRootKey</param-name>    
-        <param-value>Login.root</param-value>    
-    </context-param> 
-    <context-param>  
-        <param-name>log4jConfigLocation</param-name>  
-        <param-value>/WEB-INF/classes/log4j.properties</param-value>  
-    </context-param> 
-        <!-- 3000表示 开一条watchdog线程每60秒扫描一下配置文件的变化;这样便于日志存放位置的改变 -->  
-    <context-param>    
-         <param-name>log4jRefreshInterval</param-name>    
-         <param-value>3000</param-value>    
-    </context-param>   
-    <listener>  
-        <listener-class>org.springframework.web.util.Log4jConfigListener</listener-class>  
-    </listener>
-<!-- log4j配置 -->  
+  <servlet-mapping>
+    <servlet-name>dwr</servlet-name>
+    <url-pattern>/dwr/*</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <servlet-name>JasperReportImageServlet</servlet-name>
+    <servlet-class>net.sf.jasperreports.j2ee.servlets.ImageServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>JasperReportImageServlet</servlet-name>
+    <url-pattern>/image</url-pattern>
+  </servlet-mapping>
+  <context-param>
+    <param-name>webAppRootKey</param-name>
+    <param-value>WebLogin.root</param-value>
+  </context-param>
+  <context-param>
+    <param-name>log4jConfigLocation</param-name>
+    <param-value>/WEB-INF/classes/log4j.properties</param-value>
+  </context-param>
+  <context-param>
+    <param-name>log4jRefreshInterval</param-name>
+    <param-value>3000</param-value>
+  </context-param>
+  <listener>
+    <listener-class>org.springframework.web.util.Log4jConfigListener</listener-class>
+  </listener>
 </web-app>
