--- a/Login/src/project_config.properties
+++ b/Login/src/project_config.properties
@@ -5,3 +5,4 @@ project.host_local_b=192.168.199.101
 project.url=http://203.85.73.161/WebLogin
 project.email=kyuen@yydg.com.cn
 project.liujung=liujung@mail.gj.com.tw
+project.emailpwd=yydgmail
