--- a/Login/src/project_config.properties
+++ b/Login/src/project_config.properties
@@ -5,16 +5,18 @@ project.host_local_b=192.168.199.101
 project.url=http://203.85.73.161/WebLogin
 project.url_local=http://172.17.18.173:8080/WebLogin
 project.liujung=liujung@mail.gj.com.tw
-project.lgx=lgx@yydg.com.cn
 
-project.email=kyuen@yydg.com.cn
-project.emailpwd=yydgmail-002
-project.smtp=dgmail.yydg.com.cn
-project.fromaddress=<kyuen@yydg.com.cn>
 
-#project.email=kyzxs@kyuen-dg.com
-#project.emailpwd=Ky2_mail
-#project.smtp=smtp.mxhichina.com
-#project.fromaddress=<kyzxs@kyuen-dg.com>
+#project.email=kyuen@yydg.com.cn
+#project.emailpwd=yydgmail-002
+#project.smtp=dgmail.yydg.com.cn
+#project.fromaddress=<kyuen@yydg.com.cn>
+#project.lgx=lgx@yydg.com.cn
+
+project.email=kyzxs@kyuen-dg.com
+project.emailpwd=Ky2_mail
+project.smtp=smtp.mxhichina.com
+project.fromaddress=<kyzxs@kyuen-dg.com>
+project.lgx=lgx@kyuen-dg.com
 
 
