--- a/Login/WebRoot/WEB-INF/web.xml
+++ b/Login/WebRoot/WEB-INF/web.xml
@@ -100,4 +100,8 @@
   <listener>
     <listener-class>org.springframework.web.util.Log4jConfigListener</listener-class>
   </listener>
+  <mime-mapping>
+  <extension>xlsx</extension>
+  <mime-type>application/vnd.openxmlformats-officedocument.spreadsheetml.sheet</mime-type>
+  </mime-mapping>
 </web-app>
