--- a/Login/src/project_config.properties
+++ b/Login/src/project_config.properties
@@ -15,7 +15,8 @@ project.liujung=liujung@mail.gj.com.tw
 
 project.email=kyzxs@kyuen-dg.com
 project.emailpwd=Ky2_mail
-project.smtp=smtp.mxhichina.com
+#project.smtp=smtp.mxhichina.com
+project.smtp=smtp.qiye.aliyun.com
 project.fromaddress=<kyzxs@kyuen-dg.com>
 project.lgx=lgx@kyuen-dg.com
 
