--- a/Login/.settings/org.eclipse.core.resources.prefs
+++ b/Login/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,4 @@
-#Fri Mar 10 15:23:49 CST 2017
+#Mon Oct 28 08:39:19 CST 2019
 eclipse.preferences.version=1
 encoding//WebRoot/500.html=UTF-8
 encoding//WebRoot/css/button_css.css=UTF-8
@@ -34,6 +34,7 @@ encoding//src/entity/VKpifact.java=UTF-8
 encoding//src/entity/WebUser.java=UTF-8
 encoding//src/mail/AutoSendKyz.java=UTF-8
 encoding//src/mail/AutoSendKyzAll.java=UTF-8
+encoding//src/mail/AutoSendWebobjA.java=UTF-8
 encoding//src/mail/MailSenderInfo.java=UTF-8
 encoding//src/mail/MyAuthenticator.java=UTF-8
 encoding//src/mail/SimpleMailSender.java=UTF-8
