--- a/Login/src/project_config.properties
+++ b/Login/src/project_config.properties
@@ -15,9 +15,20 @@ project.liujung=liujung@mail.gj.com.tw
 
 project.email=kyzxs@kyuen-dg.com
 project.emailpwd=Ky2_mail
-#project.smtp=smtp.mxhichina.com
 project.smtp=smtp.qiye.aliyun.com
 project.fromaddress=<kyzxs@kyuen-dg.com>
 project.lgx=lgx@kyuen-dg.com
+#project.smtp=smtp.mxhichina.com
+
+#new email  2020/0409
+#project.email=kyzxs_2@aliyun.com
+#project.emailpwd=Ky2_mail
+#project.smtp=smtp.aliyun.com
+#project.fromaddress=<kyzxs_2@aliyun.com>
 
 
+#new email  2020/0410
+#project.email=kyzxs_2@tom.com
+#project.emailpwd=Ky2_mail
+#project.smtp=smtp.tom.com
+#project.fromaddress=<kyzxs_2@tom.com>
