--- a/Login/src/project_config.properties
+++ b/Login/src/project_config.properties
@@ -13,12 +13,30 @@ project.liujung=liujung@mail.gj.com.tw
 #project.fromaddress=<kyuen@yydg.com.cn>
 #project.lgx=lgx@yydg.com.cn
 
-project.email=kyzxs@kyuen-dg.com
-project.emailpwd=Ky2_mail
-project.smtp=smtp.qiye.aliyun.com
-project.fromaddress=<kyzxs@kyuen-dg.com>
-project.lgx=lgx@kyuen-dg.com
+#project.email=kyzxs@kyuen-dg.com
+#project.emailpwd=Ky2_mail
+#project.smtp=smtp.qiye.aliyun.com
+#project.fromaddress=<kyzxs@kyuen-dg.com>
+#project.lgx=lgx@kyuen-dg.com
 #project.smtp=smtp.mxhichina.com
+project.lgx=373540330@qq.com
+
+#new email  2020/0413
+#project.email=kyzxs2@yahoo.com
+#project.emailpwd=oiajgvdqkgxumsnu
+#project.smtp=smtp.mail.yahoo.com
+#project.fromaddress=<kyzxs2@yahoo.com>
+
+project.email=kyzxs_2@outlook.com
+project.emailpwd=Ky2_mail
+project.smtp=smtp.office365.com
+project.fromaddress=<kyzxs_2@outlook.com>
+
+#new email  2020/0410
+#project.email=kyzxs_2@tom.com
+#project.emailpwd=Ky2_mail
+#project.smtp=smtp.tom.com
+#project.fromaddress=<kyzxs_2@tom.com>
 
 #new email  2020/0409
 #project.email=kyzxs_2@aliyun.com
@@ -27,8 +45,5 @@ project.lgx=lgx@kyuen-dg.com
 #project.fromaddress=<kyzxs_2@aliyun.com>
 
 
-#new email  2020/0410
-#project.email=kyzxs_2@tom.com
-#project.emailpwd=Ky2_mail
-#project.smtp=smtp.tom.com
-#project.fromaddress=<kyzxs_2@tom.com>
+
+
