--- a/Login/src/project_config.properties
+++ b/Login/src/project_config.properties
@@ -28,9 +28,18 @@ project.lgx=373540330@qq.com
 #project.fromaddress=<kyzxs2@yahoo.com>
 
 project.email=kyzxs_2@outlook.com
-project.emailpwd=Ky2_mail
-project.smtp=smtp.office365.com
+#project.emailpwd=Ky2_mail
+project.emailpwd=lofcpbmjemlsjsul
+#project.smtp=smtp.office365.com
+#project.smtp=smtp-legacy.office365.com
+project.smtp=smtp-mail.outlook.com
 project.fromaddress=<kyzxs_2@outlook.com>
+
+#new email 20211007
+#project.email=project@mail.gj.com.tw
+#project.emailpwd=Gj52676089
+#project.smtp=smtp.office365.com
+#project.fromaddress=<project@mail.gj.com.tw>
 
 #new email  2020/0410
 #project.email=kyzxs_2@tom.com
